--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <body class="index">
   <div class="page">
     <div class="inner">
-      <h2>Únete a la #RevueltaEscolar</h2>
-      <h1 class="large">¡POR UNOS ENTORNOS ESCOLARES SEGUROS Y PACIFICADOS!</h1>
+      <h2>Join the #SchoolRebellion</h2>
+      <h1 class="large">FOR SAFE AND PEACEFUL SCHOOL ENVIRONMENTS!</h1>
       <img src="images/cartells.svg">
       <div class="text">
         <p>Diferentes Asociaciones de Famílias de Alumnos (AFA) en Cataluña, en colaboración con entidades vecinales, estamos realizando cada 15 días cortes de tráfico los viernes a la salida del colegio para reclamar una mayor pacificación y seguridad de los entornos escolares, menos contaminación y menos ruido.</p>
