--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Por unos entornos escolares seguros y pacificados! Únete a la #RevueltaEscolar!</title>
+  <title>For safe and peaceful school environments! Join the #SchoolRebellion!</title>
   <meta name="description" content="Diferentes Asociaciones de Famílias de Alumnos (AFA) en Cataluña, en colaboración con entidades vecinales, estamos realizando cada 15 días cortes de tráfico los viernes a la salida del colegio para reclamar una mayor pacificación y seguridad de los entornos escolares, menos contaminación y menos ruido.">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
@@ -23,43 +23,48 @@
 <body class="index">
   <div class="page">
     <div class="inner">
+      <div class="lang">
+        <a href="https://www.schoolrebellion.com">English</a>
+        <a href="https://www.revueltaescolar.es">Español</a>
+        <a href="https://www.revoltaescolar.cat">Català</a>
+      </div>
       <h2>Join the #SchoolRebellion</h2>
-      <h1 class="large">FOR SAFE AND PEACEFUL SCHOOL ENVIRONMENTS!</h1>
+      <h1 class="large" style="max-width: 1000px;">FOR SAFE AND PEACEFUL SCHOOL ENVIRONMENTS!</h1>
       <img src="images/cartells.svg">
       <div class="text">
-        <p>Diferentes Asociaciones de Famílias de Alumnos (AFA) en Cataluña, en colaboración con entidades vecinales, estamos realizando cada 15 días cortes de tráfico los viernes a la salida del colegio para reclamar una mayor pacificación y seguridad de los entornos escolares, menos contaminación y menos ruido.</p>
-        <p>Empezamos en diciembre de 2020, con 20 colegios y 17 cortes de tráfico. En poco tiempo ya hemos crecido hasta ser 63 centros mobilizados. El próximo <b>viernes 12 de febrero a las 16:30</b> realizaremos 51 cortes de calle simultáneos en tres ciudades diferentes: Barcelona, Badalona y Sabadell. Lo que hemos denominado la <b>#RevueltaEscolar</b>.</p>
-        <p>Para que os hagáis una idea, estos son los cortes de calle que habrá en la próxima protesta en Barcelona:</p>
+        <p>Parents and Teachers Associations (PTAs) in Catalonia, in collaboration with neighbourhood organizations, are carrying out roadblocks every 15 days on Fridays when leaving school to demand greater pacification and safety of school environments, less pollution and less noise.</p>
+        <p>We started in December 2020, with 20 schools and 17 traffic cuts. In a short time, we have already grown to 63 mobilized centres. Next Friday, February 12th at 4:30 p.m., we will carry out 51 simultaneous roadblocks in three different cities: Barcelona, ​​Badalona and Sabadell. We have called it the <b>#SchoolRebellion</b>.</p>
+        <p>To give you an idea, these are the roadblocks that will take place at the next protest in Barcelona:</p>
         <img src="/images/mapa-barcelona.jpg">
-        <p>La protesta no para de crecer. Se está extendiendo a más ciudades. Por lo que sería genial si desde vuestra AFA o AMPA también os animárais a participar!</p>
-        <h2>¿Cuando serán las próximas protestas?</h2>
-        <p>Es importante, para tener una mayor repercusión, que vayamos todos a una. Por eso hemos marcado las siguientes fechas: 12 de febrero, 26 de febrero, 12 de marzo, 26 de marzo, etc. Todas en viernes, cada 15 dies, y a la hora de la salida del colegio.</p>
-        <h2>¿Qué deberíamos hacer para sumarnos?</h2>
-        <p>Primero de todo, el AFA o AMPA de vuestro centro, debería aprobar en junta añadirse a la protesta. Una vez aprobado, tendréis que notificar a la delegación del gobierno de vuestra ciudad la fecha, hora y lugar del corte de calle. De esta forma será la policía municipal la que realizará el corte de tráfico, garantizando de esta forma vuestra seguridad.</p>
-        <p>Segundo, deberéis hacer el máximo de difusión del dia, hora y lugar de la protesta. Tanto a las famílias del colegio, como a los vecinos y entidades del barrio. En <a href="">este enlace</a> podéis adaptar y descargaros el cartel que estamos utilizando en el resto de protestas.</p>
+        <p>The protest does not stop growing and is spreading to more cities, so it would be great if your PTA also encouraged you to participate!</p>
+        <h2>When will the next protests be?</h2>
+        <p>It is important that we all go together to make a greater impact. That is why we have marked the following dates: February 12th, February 26th, March 12th, March 26th, etc. Always on Friday, every 14 days, and at the time of school closure.</p>
+        <h2>What should we do to join?</h2>
+        <p>First of all, the PTA of your education centre should approve adding to the protest, in a meeting. Once approved, you will have to notify your city government delegation of the date, time and place of the roadblock. This way, it will be the municipal police that will cut traffic off, thus guaranteeing your safety.</p>
+        <p>Secondly, you must maximize the announcement of the day, time and place of the protest; both to the families of the school, as well as to the neighbours and neighbourhood organizations. In this link, you can adapt and download the poster that we are using in the rest of the protests.</p>
         <div class="menu">
           <div class="button">
-            <a href="poster" style="background: #F28C27">Descárgate el cartel</a>
+            <a href="poster" style="background: #F28C27">Download the poster</a>
           </div>
         </div>
-        <p>Una de las claves del éxito de la <b>#RevueltaEscolar</b>, es el día y la hora en la que se realiza: el viernes, a la salida del colegio. Es importante que cuando los alumnos salgan del centro, la calle ya esté cortada. De esta forma, a las famílias les resultará muy fácil añadirse. Anima mucho, siempre que lo permitan las medidas de prevención del Covid-19, si acompañáis la protesta con alguna actividad festiva: música, juegos, etc.</p>
+        <p>One of the keys to the success of the <b>#SchoolRebellion</b> is the day and time it takes place: Friday, after school. It is important that when the students leave the centre, the street is already closed. In this way, it will be very easy for families to add themselves to the protest. It encourages them if you accompany the protest with some festive activity: music, games, etc, as long as the Covid-19 prevention measures allow it.</p>
 
-        <p>También os recomendamos, unos días antes de la protesta, que os reunáis unas cuantas famílias (en el parque, o en alguna aula del colegio) para preparar carteles para la protesta. Con unos cartones y unos rotuladores se pueden hacer carteles muy chulos. Podéis utilizar mensajes como: "¡Menos coches, más salud!", "Menos ruido", "Menos contaminación", etc. Tener pancartas y carteles funciona muy bien para animar a las famílias a participar, y también así se consigue que las fotos que después van corriendo por las redes y grupos de whatsapp hablen por si solas.</p>
-        <p>En <a href="https://www.dropbox.com/sh/5nrrhjelpm8jzcd/AAC_TeWQ7NxgBFY77eKLomvea?dl=0https://www.dropbox.com/sh/5nrrhjelpm8jzcd/AAC_TeWQ7NxgBFY77eKLomvea?dl=0">este enlace</a> puedes ver algunas fotos de las protestas anteriores.</p>
+        <p>We also recommend, a few days before the protest, that you get together a few families (in the park, or in a school classroom) to prepare posters for the protest. You can make very cool posters with some cardboard and some markers. You can use messages like: "Less cars, more health!", "Less noise!", "Less pollution!", etc. Having banners and posters works very well to encourage families to participate, and in this way the photos that are later running through the networks and WhatsApp groups speak for themselves.</p>
+        <p>In <a href="https://www.dropbox.com/sh/5nrrhjelpm8jzcd/AAC_TeWQ7NxgBFY77eKLomvea?dl=0https://www.dropbox.com/sh/5nrrhjelpm8jzcd/AAC_TeWQ7NxgBFY77eKLomvea?dl=0">this link</a>, you can see some photos of the previous protests</p>
         <img src="/images/protestas.png">
         <div class="menu">
           <div class="button">
-            <a href="https://www.dropbox.com/sh/5nrrhjelpm8jzcd/AAC_TeWQ7NxgBFY77eKLomvea?dl=0" target="_blank" style="background: #F69885">Ver más fotos de las protestas</a>
+            <a href="https://www.dropbox.com/sh/5nrrhjelpm8jzcd/AAC_TeWQ7NxgBFY77eKLomvea?dl=0" target="_blank" style="background: #F69885">See more photos of the protests</a>
           </div>
         </div>
-        <p>Finalmente, es importante que animéis a otros colegios de vuestra ciudad a añadirse a la protesta. Lo más fácil es que créeis un grupo de Whatsapp o Telegram que os permita coordinaros y añadir a todas las AFAs de vuestro municipio que puedan estar interesadas en participar. Compartir la experiencia, anima a otros centros a participar.</p>
-        <p>Si finalmente dáis el paso, también os pediremos <a href="mailto:eixample.respira@gmail.com?subject=Notificaci%C3%B3n%20corte%20de%20calle%20del%20%5BNOMBRE%20DE%20VUESTRA%20AFA%20O%20AMPA%5D&body=Hola%2C%0D%0A%0D%0AOs%20escribimos%20para%20notificaros%20que%20haremos%20el%20siguiente%20corte%20de%20calle%2C%20para%20que%20as%C3%AD%20lo%20pod%C3%A1is%20a%C3%B1adir%20a%20la%20comunicaci%C3%B3n%20unitaria%20de%20la%20protesta%3A%0D%0A%0D%0A-%20municipio%3A%20%5BMUNICIPIO%5D%0D%0A-%20fecha%20del%20corte%20de%20calle%3A%20%5BFECHA%5D%0D%0A-%20ubicaci%C3%B3n%3A%20%5BCALLE%20X%20con%20CALL%20Y%5D%0D%0A-%20hora%20del%20corte%3A%20%5BHH%3AMM%5D%0D%0A-%20participan%3A%20%5BAFA%20o%20AMPA%20X%2C%20AFA%20o%20AMPA%20Y%2C...%5D%0D%0A%0D%0AGracias%2C%0D%0A%0D%0AAFA%20o%20AMPA%20X">que nos aviséis</a>. De esta forma podemos hacer un seguimiento de cómo va creciendo la protesta y os podremos ayudar si tenéis cualquier consulta.</p>
+        <p>Finally, it is important that you encourage other schools in your city to join the protest. The easiest thing is to create a WhatsApp or Telegram group that allows you to coordinate and add to all the PTAs in your region that may be interested in participating. Sharing the experience encourages other centres to participate.</p>
+        <p>If you finally take the step, we will also ask you to <a href="mailto:eixample.respira@gmail.com?subject=Notificaci%C3%B3n%20corte%20de%20calle%20del%20%5BNOMBRE%20DE%20VUESTRA%20AFA%20O%20AMPA%5D&body=Hola%2C%0D%0A%0D%0AOs%20escribimos%20para%20notificaros%20que%20haremos%20el%20siguiente%20corte%20de%20calle%2C%20para%20que%20as%C3%AD%20lo%20pod%C3%A1is%20a%C3%B1adir%20a%20la%20comunicaci%C3%B3n%20unitaria%20de%20la%20protesta%3A%0D%0A%0D%0A-%20municipio%3A%20%5BMUNICIPIO%5D%0D%0A-%20fecha%20del%20corte%20de%20calle%3A%20%5BFECHA%5D%0D%0A-%20ubicaci%C3%B3n%3A%20%5BCALLE%20X%20con%20CALL%20Y%5D%0D%0A-%20hora%20del%20corte%3A%20%5BHH%3AMM%5D%0D%0A-%20participan%3A%20%5BAFA%20o%20AMPA%20X%2C%20AFA%20o%20AMPA%20Y%2C...%5D%0D%0A%0D%0AGracias%2C%0D%0A%0D%0AAFA%20o%20AMPA%20X">notify us</a>. In this way we can keep track of how the protest is growing, and we can help you if you have any questions.</p>
         <div class="menu">
           <div class="button">
-            <a href="mailto:eixample.respira@gmail.com?subject=Notificaci%C3%B3n%20corte%20de%20calle%20del%20%5BNOMBRE%20DE%20VUESTRA%20AFA%20O%20AMPA%5D&body=Hola%2C%0D%0A%0D%0AOs%20escribimos%20para%20notificaros%20que%20haremos%20el%20siguiente%20corte%20de%20calle%2C%20para%20que%20as%C3%AD%20lo%20pod%C3%A1is%20a%C3%B1adir%20a%20la%20comunicaci%C3%B3n%20unitaria%20de%20la%20protesta%3A%0D%0A%0D%0A-%20municipio%3A%20%5BMUNICIPIO%5D%0D%0A-%20fecha%20del%20corte%20de%20calle%3A%20%5BFECHA%5D%0D%0A-%20ubicaci%C3%B3n%3A%20%5BCALLE%20X%20con%20CALL%20Y%5D%0D%0A-%20hora%20del%20corte%3A%20%5BHH%3AMM%5D%0D%0A-%20participan%3A%20%5BAFA%20o%20AMPA%20X%2C%20AFA%20o%20AMPA%20Y%2C...%5D%0D%0A%0D%0AGracias%2C%0D%0A%0D%0AAFA%20o%20AMPA%20X" target="_blank" style="background: #F9B733;">Notificar la protesta</a>
+            <a href="mailto:eixample.respira@gmail.com?subject=Notificaci%C3%B3n%20corte%20de%20calle%20del%20%5BNOMBRE%20DE%20VUESTRA%20AFA%20O%20AMPA%5D&body=Hola%2C%0D%0A%0D%0AOs%20escribimos%20para%20notificaros%20que%20haremos%20el%20siguiente%20corte%20de%20calle%2C%20para%20que%20as%C3%AD%20lo%20pod%C3%A1is%20a%C3%B1adir%20a%20la%20comunicaci%C3%B3n%20unitaria%20de%20la%20protesta%3A%0D%0A%0D%0A-%20municipio%3A%20%5BMUNICIPIO%5D%0D%0A-%20fecha%20del%20corte%20de%20calle%3A%20%5BFECHA%5D%0D%0A-%20ubicaci%C3%B3n%3A%20%5BCALLE%20X%20con%20CALL%20Y%5D%0D%0A-%20hora%20del%20corte%3A%20%5BHH%3AMM%5D%0D%0A-%20participan%3A%20%5BAFA%20o%20AMPA%20X%2C%20AFA%20o%20AMPA%20Y%2C...%5D%0D%0A%0D%0AGracias%2C%0D%0A%0D%0AAFA%20o%20AMPA%20X" target="_blank" style="background: #F9B733;">Notify the protest</a>
           </div>
         </div>
-        <p>Si tienes cualquier consulta o pregunta, no dudeis en contactarnos en <a href="mailto:eixample.respira@gmail.com">eixample.respira@gmail.com</a> o en el teléfono <a href="tel:620426435">620426435</a>.</p>
+        <p>If you have any questions or queries, do not hesitate to contact us at <a href="mailto:eixample.respira@gmail.com">eixample.respira@gmail.com</a> or by phone at <a href="tel:+34620426435">+34 620 426 435</a>.</p>
       </div>
     </div>
   </div>
