--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html>
 <head>
   <title>For safe and peaceful school environments! Join the #SchoolRebellion!</title>
-  <meta name="description" content="Diferentes Asociaciones de Famílias de Alumnos (AFA) en Cataluña, en colaboración con entidades vecinales, estamos realizando cada 15 días cortes de tráfico los viernes a la salida del colegio para reclamar una mayor pacificación y seguridad de los entornos escolares, menos contaminación y menos ruido.">
+  <meta name="description" content="Parents and Teachers Associations (PTAs) in Catalonia, in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand greater pacification and safety of school environments, less pollution and less noise.">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-  <meta property="og:title" content="Per uns entorns segurs i pacificats!"/>
-  <meta property="og:description" content="Diferentes Asociaciones de Famílias de Alumnos (AFA) en Cataluña, en colaboración con entidades vecinales, estamos realizando cada 15 días cortes de tráfico los viernes a la salida del colegio para reclamar una mayor pacificación y seguridad de los entornos escolares, menos contaminación y menos ruido. ¡Haz que tu AFA o AMPA se sume!">
-  <meta property="og:url" content="https://www.revueltaescolar.es"/>
+  <meta property="og:title" content="For safe and peaceful school environments! Join the #SchoolRebellion!"/>
+  <meta property="og:description" content="Parents and Teachers Associations (PTAs) in Catalonia, in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand greater pacification and safety of school environments, less pollution and less noise.">
+  <meta property="og:url" content="https://www.schoolrebellion.com"/>
   <meta property="og:image" content="https://www.revueltaescolar.es/images/sharing.jpg?v=1"/>
-  <meta property="og:site_name" content="revueltaescolar.es"/>
+  <meta property="og:site_name" content="schoolrebellion.com"/>
   <meta property="og:type" content="website"/>
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Por unos entornos escolares seguros y pacificados! Únete a la #RevueltaEscolar!">
+  <meta name="twitter:title" content="For safe and peaceful school environments! Join the #SchoolRebellion!">
   <meta name="twitter:image" content="https://www.revueltaescolar.es/images/sharing.jpg?v=1">
-  <meta name="twitter:description" content="Diferentes Asociaciones de Famílias de Alumnos (AFA) en Cataluña, en colaboración con entidades vecinales, estamos realizando cada 15 días cortes de tráfico los viernes a la salida del colegio para reclamar una mayor pacificación y seguridad de los entornos escolares, menos contaminación y menos ruido. ¡Haz que tu AFA o AMPA se sume!">
+  <meta name="twitter:description" content="Parents and Teachers Associations (PTAs) in Catalonia, in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand greater pacification and safety of school environments, less pollution and less noise.">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
@@ -30,15 +30,15 @@
       </div>
       <h2>Join the #SchoolRebellion</h2>
       <h1 class="large" style="max-width: 1000px;">FOR SAFE AND PEACEFUL SCHOOL ENVIRONMENTS!</h1>
-      <img src="images/cartells.svg">
+      <img src="images/cartells.svg?v=1">
       <div class="text">
-        <p>Parents and Teachers Associations (PTAs) in Catalonia, in collaboration with neighbourhood organizations, are carrying out roadblocks every 15 days on Fridays when leaving school to demand greater pacification and safety of school environments, less pollution and less noise.</p>
+        <p>Parents and Teachers Associations (PTAs) in Catalonia, in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand greater pacification and safety of school environments, less pollution and less noise.</p>
         <p>We started in December 2020, with 20 schools and 17 traffic cuts. In a short time, we have already grown to 63 mobilized centres. Next Friday, February 12th at 4:30 p.m., we will carry out 51 simultaneous roadblocks in three different cities: Barcelona, ​​Badalona and Sabadell. We have called it the <b>#SchoolRebellion</b>.</p>
         <p>To give you an idea, these are the roadblocks that will take place at the next protest in Barcelona:</p>
-        <img src="/images/mapa-barcelona.jpg">
+        <img src="/images/mapa-barcelona.jpg?v=1">
         <p>The protest does not stop growing and is spreading to more cities, so it would be great if your PTA also encouraged you to participate!</p>
         <h2>When will the next protests be?</h2>
-        <p>It is important that we all go together to make a greater impact. That is why we have marked the following dates: February 12th, February 26th, March 12th, March 26th, etc. Always on Friday, every 14 days, and at the time of school closure.</p>
+        <p>It is important that we all go together to make a greater impact. That is why we have marked the following dates: February 12th, February 26th, March 12th, March 26th, etc. Always on Friday, every 2 weeks, and at the time of school closure.</p>
         <h2>What should we do to join?</h2>
         <p>First of all, the PTA of your education centre should approve adding to the protest, in a meeting. Once approved, you will have to notify your city government delegation of the date, time and place of the roadblock. This way, it will be the municipal police that will cut traffic off, thus guaranteeing your safety.</p>
         <p>Secondly, you must maximize the announcement of the day, time and place of the protest; both to the families of the school, as well as to the neighbours and neighbourhood organizations. In this link, you can adapt and download the poster that we are using in the rest of the protests.</p>
@@ -58,10 +58,10 @@
           </div>
         </div>
         <p>Finally, it is important that you encourage other schools in your city to join the protest. The easiest thing is to create a WhatsApp or Telegram group that allows you to coordinate and add to all the PTAs in your region that may be interested in participating. Sharing the experience encourages other centres to participate.</p>
-        <p>If you finally take the step, we will also ask you to <a href="mailto:eixample.respira@gmail.com?subject=Notificaci%C3%B3n%20corte%20de%20calle%20del%20%5BNOMBRE%20DE%20VUESTRA%20AFA%20O%20AMPA%5D&body=Hola%2C%0D%0A%0D%0AOs%20escribimos%20para%20notificaros%20que%20haremos%20el%20siguiente%20corte%20de%20calle%2C%20para%20que%20as%C3%AD%20lo%20pod%C3%A1is%20a%C3%B1adir%20a%20la%20comunicaci%C3%B3n%20unitaria%20de%20la%20protesta%3A%0D%0A%0D%0A-%20municipio%3A%20%5BMUNICIPIO%5D%0D%0A-%20fecha%20del%20corte%20de%20calle%3A%20%5BFECHA%5D%0D%0A-%20ubicaci%C3%B3n%3A%20%5BCALLE%20X%20con%20CALL%20Y%5D%0D%0A-%20hora%20del%20corte%3A%20%5BHH%3AMM%5D%0D%0A-%20participan%3A%20%5BAFA%20o%20AMPA%20X%2C%20AFA%20o%20AMPA%20Y%2C...%5D%0D%0A%0D%0AGracias%2C%0D%0A%0D%0AAFA%20o%20AMPA%20X">notify us</a>. In this way we can keep track of how the protest is growing, and we can help you if you have any questions.</p>
+        <p>If you finally take the step, we will also ask you to <a href="mailto:eixample.respira@gmail.com?subject=We%20are%20joining%20the%20%23SchollRebellion!&body=Hi%2C%0D%0A%0D%0AWe%20are%20writing%20to%20notify%20we%20will%20are%20joining%20the%20%23SchollRebellion.%20We%20will%20be%20blocking%3A%0D%0A%0D%0A-%20country%3A%20%5BCOUNTRY%5D%0D%0A-%20city%3A%20%5BCITY%5D%0D%0A-%20date%3A%20%5BDATE%5D%0D%0A-%20street%3A%20%5BSTREET%20X%20with%20CALL%20Y%5D%0D%0A-%20time%3A%20%5BHH%3A%20MM%5D%0D%0A-%20callers%3A%20%5BPTA%20FROM%20SCHOOL%20X%2C%20PTA%20FROM%20SCHOOL%20Y%2C%20...%5D%0D%0A%0D%0AThank%20you!%0D%0A%0D%0A%E2%80%94%20PTA%20FROM%20SCHOOL%20X">notify us</a>. In this way we can keep track of how the protest is growing, and we can help you if you have any questions.</p>
         <div class="menu">
           <div class="button">
-            <a href="mailto:eixample.respira@gmail.com?subject=Notificaci%C3%B3n%20corte%20de%20calle%20del%20%5BNOMBRE%20DE%20VUESTRA%20AFA%20O%20AMPA%5D&body=Hola%2C%0D%0A%0D%0AOs%20escribimos%20para%20notificaros%20que%20haremos%20el%20siguiente%20corte%20de%20calle%2C%20para%20que%20as%C3%AD%20lo%20pod%C3%A1is%20a%C3%B1adir%20a%20la%20comunicaci%C3%B3n%20unitaria%20de%20la%20protesta%3A%0D%0A%0D%0A-%20municipio%3A%20%5BMUNICIPIO%5D%0D%0A-%20fecha%20del%20corte%20de%20calle%3A%20%5BFECHA%5D%0D%0A-%20ubicaci%C3%B3n%3A%20%5BCALLE%20X%20con%20CALL%20Y%5D%0D%0A-%20hora%20del%20corte%3A%20%5BHH%3AMM%5D%0D%0A-%20participan%3A%20%5BAFA%20o%20AMPA%20X%2C%20AFA%20o%20AMPA%20Y%2C...%5D%0D%0A%0D%0AGracias%2C%0D%0A%0D%0AAFA%20o%20AMPA%20X" target="_blank" style="background: #F9B733;">Notify the protest</a>
+            <a href="mailto:eixample.respira@gmail.com?subject=We%20are%20joining%20the%20%23SchollRebellion!&body=Hi%2C%0D%0A%0D%0AWe%20are%20writing%20to%20notify%20we%20will%20are%20joining%20the%20%23SchollRebellion.%20We%20will%20be%20blocking%3A%0D%0A%0D%0A-%20country%3A%20%5BCOUNTRY%5D%0D%0A-%20city%3A%20%5BCITY%5D%0D%0A-%20date%3A%20%5BDATE%5D%0D%0A-%20street%3A%20%5BSTREET%20X%20with%20CALL%20Y%5D%0D%0A-%20time%3A%20%5BHH%3A%20MM%5D%0D%0A-%20callers%3A%20%5BPTA%20FROM%20SCHOOL%20X%2C%20PTA%20FROM%20SCHOOL%20Y%2C%20...%5D%0D%0A%0D%0AThank%20you!%0D%0A%0D%0A%E2%80%94%20PTA%20FROM%20SCHOOL%20X" target="_blank" style="background: #F9B733;">Notify the protest</a>
           </div>
         </div>
         <p>If you have any questions or queries, do not hesitate to contact us at <a href="mailto:eixample.respira@gmail.com">eixample.respira@gmail.com</a> or by phone at <a href="tel:+34620426435">+34 620 426 435</a>.</p>
