--- a/poster.html
+++ b/poster.html
@@ -25,7 +25,7 @@
       <p>This tool is in beta. Fill in the fields and download the image. If you end up with any issue, please reach us at <a href="mailto:eixample.respira@gmail.com">eixample.respira@gmail.com</a>.</p>
       <div class="row">
         <label>Subtitle:</label>
-        <input type="text" data-target=".poster .subtitle" placeholder="we cut Main Street">
+        <input type="text" data-target=".poster .subtitle" placeholder="we will be blocking Main Street">
       </div>
       <div class="row">
         <label>Date:</label>
@@ -77,61 +77,63 @@
         <input type="text" data-target=".poster .location" maxlength="38" placeholder="Main Street between 3rd and 4rth">
       </div>
       <div class="row">
-        <label>Duración:</label>
+        <label>Duration:</label>
         <div class="shopify-select">
           <select data-target=".poster .duration">
-            <option>30 minutos</option>
-            <option>45 minutos</option>
-            <option>1 hora</option>
-            <option>2 horas</option>
+            <option>30 minutes</option>
+            <option>45 minutes</option>
+            <option>1 hour</option>
+            <option>2 hours</option>
+            <option>3 hours</option>
+            <option>4 hours</option>
           </select>
           <svg class="shopify-select-icon" viewBox="0 0 24 24"><path d="M21 5.176l-9.086 9.353L3 5.176.686 7.647 12 19.382 23.314 7.647 21 5.176z"></path></svg>
         </div>
       </div>
       <div class="row">
-        <label>Logotipo entitades convocantes:</label>
+        <label>Calling entities logo:</label>
         <input type="file" accept="image/*" data-target=".summons-1" data-parent=".summons .images"/>
         <input type="file" accept="image/*" data-target=".summons-2" data-parent=".summons .images"/>
         <input type="file" accept="image/*" data-target=".summons-3" data-parent=".summons .images"/>
         <input type="file" accept="image/*" data-target=".summons-4" data-parent=".summons .images"/>
       </div>
       <div class="row">
-        <label>Logotipo entitades que dan apoyo:</label>
+        <label>Support entities logo:</label>
         <input type="file" accept="image/*" data-target=".support-1" data-parent=".support .images"/>
         <input type="file" accept="image/*" data-target=".support-2" data-parent=".support .images"/>
         <input type="file" accept="image/*" data-target=".support-3" data-parent=".support .images"/>
         <input type="file" accept="image/*" data-target=".support-4" data-parent=".support .images"/>
       </div>
       <div class="row">
-        <a class="download" href="" data-action="download">Descargar</a>
+        <a class="download" href="" data-action="download">Download</a>
       </div>
     </div>
     <div class="right">
       <div class="container">
         <div class="poster">
-          <img class="background" src="/images/base.png">
-          <div class="text subtitle">we cut Main Street</div>
+          <img class="background" src="/images/base-en.png">
+          <div class="text subtitle">we will be blocking Main Street</div>
           <div class="text info">
-            <b><span class="date">Viernes 12 de febrero</span></b><br>
+            <b><span class="date">Friday, February 12th</span></b><br>
             <b><span class="time">16.30</span> h</b><br>
             <span class="location">Main Street between 3rd and 4rth</span><br>
-            Duración: <span class="duration">30 minutos</span>
+            Duration: <span class="duration">30 minutes</span>
           </div>
           <div class="logos">
             <div class="section summons">
-              <div class="text">Convoca:</div>
+              <div class="text">Calls:</div>
               <div class="images">
                 <img src="/images/logo-afa.jpg" class="summons-1">
               </div>
             </div>
             <div class="section support">
-              <div class="text" style="display: none;">Con el apoyo de:</div>
+              <div class="text" style="display: none;">With support from::</div>
               <div class="images">
               </div>
             </div>
           </div>
           <div class="url">
-            <div class="text">Más información en: <u>www.revueltaescolar.es</u></div>
+            <div class="text">More information at: <u>www.schoolrebellion.com</u></div>
           </div>
         </div>
       </div>  
