--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <h1 class="large" style="max-width: 1000px;">FOR SAFE AND PEACEFUL SCHOOL ENVIRONMENTS!</h1>
       <img src="images/cartells.svg?v=1">
       <div class="text">
-        <p>Parents and Teachers Associations (PTAs) in Catalonia, in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand greater pacification and safety of school environments, less pollution and less noise.</p>
+        <p style="font-weight: bold;">Parents and Teachers Associations (PTAs) in Catalonia, in collaboration with neighbourhood organizations, are carrying out roadblocks every 2 weeks on Fridays when leaving school to demand greater pacification and safety of school environments, less pollution and less noise.</p>
         <p>We started in December 2020, with 20 schools and 17 traffic cuts. In a short time, we have already grown to 63 mobilized centres. Next Friday, February 12th at 4:30 p.m., we will carry out 51 simultaneous roadblocks in three different cities: Barcelona, ​​Badalona and Sabadell. We have called it the <b>#SchoolRebellion</b>.</p>
         <p>To give you an idea, these are the roadblocks that will take place at the next protest in Barcelona:</p>
         <img src="/images/mapa-barcelona.jpg?v=1">
