--- a/poster.html
+++ b/poster.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Poster from  #RevueltaEscolar</title>
-  <meta name="description" content="Rellena los campos y descárgate la imagen del cartel.">
+  <title>#SchoolRebellion Protest Poster</title>
+  <meta name="description" content="Fill in the fields and download your #SchoolRebellion poster.">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -91,7 +91,7 @@
         </div>
       </div>
       <div class="row">
-        <label>Calling entities logo:</label>
+        <label>Organization entities logo:</label>
         <input type="file" accept="image/*" data-target=".summons-1" data-parent=".summons .images"/>
         <input type="file" accept="image/*" data-target=".summons-2" data-parent=".summons .images"/>
         <input type="file" accept="image/*" data-target=".summons-3" data-parent=".summons .images"/>
@@ -121,7 +121,7 @@
           </div>
           <div class="logos">
             <div class="section summons">
-              <div class="text">Calls:</div>
+              <div class="text">Organiser:</div>
               <div class="images">
                 <img src="/images/logo-afa.jpg" class="summons-1">
               </div>
